# AutoMec-AD

./: .gitignore  README.md  TesteVisaoMatlab.m  requirements.txt
Arduino/: Connection.ino  Connection2.ino  I hope this explain what i learn about ESC.md  ServoRos.ino  Versao_4.ino  Versao_5.ino  sketch_jan25a.ino
Kinnect Connection/: kinect_test.py
Stitchers/: stitching.py  (+3 more)
simulation_bringup/: CMakeLists.txt  package.xml
simulation_bringup/launch/: ackermann_robot_with_arena_conversion_mltrain.launch  image_view.launch  images_view.launch  traxxas_arena.launch  traxxas_drive.launch  traxxas_drive1.launch  traxxas_drive2a.launch  traxxas_drive2av.launch  traxxas_drive_signal.launch  traxxas_drive_signal1.launch  traxxas_drive_signal2a.launch  traxxas_drive_signal2av.launch  traxxas_drive_write.launch  traxxas_free_drive.launch  traxxas_free_drive5.launch  traxxas_robot.launch  traxxas_training1.launch  traxxas_training2a.launch  traxxas_training2a_tf.launch  traxxas_training2av.launch  twist_to_ackermann.launch
simulation_bringup/launch/modules/: arena.launch  cmd_vel.launch  driving_cnn1.launch  driving_cnn2a.launch  driving_cnn2av.launch  linang_to_ackermann.launch  signal_panel.launch  signal_panel_recognition.launch  training_cnn1.launch  training_cnn2a.launch  traxxas_robot.launch  twist_to_ackermann.launch  write_cnn.launch
simulation_environment/: CMakeLists.txt  package.xml
simulation_environment/description/models/trafficCone/: TrafficConeColor.dae  model.config  trafficCone.sdf
simulation_environment/description/models/verticalSignals/CircularSignals/BusSignal/: signal.sdf
simulation_environment/description/models/verticalSignals/CircularSignals/LightsSignal/: signal.dae  signal.sdf
simulation_environment/description/models/verticalSignals/CircularSignals/RoundAboutSignal/: model.config  signal.dae
simulation_environment/description/models/verticalSignals/CircularSignals/TurnLeftSignal/: signal.sdf
simulation_environment/description/models/verticalSignals/QuadrangularSignals/CrosswalkSignal/: signal.sdf
simulation_environment/description/models/verticalSignals/QuadrangularSignals/HospitalSignal/: model.config
simulation_environment/description/models/verticalSignals/QuadrangularSignals/HospitalSignal/materials/scripts/: signal.material
simulation_environment/description/models/verticalSignals/QuadrangularSignals/ParkSignal/: model.config
simulation_environment/description/models/verticalSignals/QuadrangularSignals/RMVSignal/: model.config
simulation_environment/description/models/verticalSignals/TriangularSignals/CattleSignal/: signal.sdf
simulation_environment/description/models/verticalSignals/TriangularSignals/DepressionSignal/materials/scripts/: signal.material
simulation_environment/description/models/verticalSignals/TriangularSignals/OtherDangersSignal/materials/scripts/: signal.material
simulation_environment/description/models/verticalSignals/TriangularSignals/RoadNarrowSignal/: signal.dae
simulation_environment/launch/: signal_panel.launch
simulation_environment/models/FNR2022_map/: map2022.sdf
simulation_environment/models/FNR2022_map/materials/scripts/: fnr2022_map.material
simulation_environment/models/Obstacle/: model.config  obstacle.sdf
simulation_environment/models/TrafficCone/: model.config
simulation_environment/models/VSBusSignal/: model.config
simulation_environment/models/VSCattleSignal/: model.config
simulation_environment/models/VSCrosswalkSignal/: model.config
simulation_environment/models/VSDepressionSignal/: model.config
simulation_environment/models/VSDepressionSignal/materials/scripts/: signal_rn.material
simulation_environment/models/VSLightsSignal/: model.config
simulation_environment/models/VSOtherDangersSignal/: signal.dae
simulation_environment/models/VSParkSignal/: model.config
simulation_environment/models/VSRMVSignal/: signal.dae
simulation_environment/models/VSRoundAboutSignal/: signal.sdf
simulation_environment/models/VSTurnLeftSignal/: model.config
simulation_environment/models/VSTurnLeftSignal/materials/scripts/: signal.material
simulation_environment/models/chessboard/: chessboard.sdf
simulation_environment/scripts/: StitcherSimulation.py  ipm1.py
traxxas_description/: CMakeLists.txt  package.xml  urdf_robot05.rviz
traxxas_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_rviz.launch  cmd_vel.launch  linang_to_ackermann.launch  rviz.launch  rviz_robot01.launch  rviz_robot02.launch  rviz_robot03.launch  rviz_robot04.launch  rviz_robot05.launch  traxxas.launch  twist_to_ackermann.launch
traxxas_description/scripts/: cmd_vel.py  linang_to_ackermann.py
traxxas_description/urdf/: robot01.gazebo.macro.xacro  robot01.urdf.xacro  robot02.gazebo.macro.xacro  robot02.urdf.xacro  robot03.gazebo.macro.xacro  robot03.urdf.old.xacro  robot03.urdf.xacro  robot04.gazebo.macro.xacro  robot04.urdf.xacro  robot04_a.gazebo.macro.xacro  robot04_a.urdf.xacro  robot05.gazebo.macro.xacro  robot05.urdf.xacro  robot05_03.gazebo.macro.xacro  robot05_03.urdf.xacro  robot05_040_038.gazebo.macro.xacro  robot05_040_038.urdf.xacro  robot05_05.urdf.xacro  robot05_08.urdf.xacro  robot05_test.gazebo.macro.xacro  robot05_test.urdf.xacro
(+629 files in other folders)
