<?xml version="1.0"?>
<package format="2">
  <name>simulation_bringup</name>
  <version>0.0.0</version>
  <description>The simulation_bringup package</description>

  <maintainer email="inaciose@gmail.com">inaciose</maintainer>
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/simulation_bringup</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
