<?xml version="1.0"?>
<package format="2">
  <name>simulation_environment</name>
  <version>0.0.0</version>
  <description>The simulation_environment package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="inaciose@gmail.com">Sergio Inacio</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/simulation_environment</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/> <!-- prefix: is the path to package.xml-->
    <!-- <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/> --><!-- prefix: path to package.xml-->
    <gazebo_ros gazebo_model_path="${prefix}/description/models"/>
    <!--  prefix: path to package.xml -->
    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/TriangularSignals"/>
    <!--  prefix: path to package.xml -->
    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/QuadrangularSignals"/>
    <!--  prefix: path to package.xml -->
    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/CircularSignals"/>
    <!--  prefix: path to package.xml -->
    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/>

  </export>
</package>
