<?xml version="1.0"?>
<package format="2">
  <name>traxxas_description</name>
  <version>1.0.0</version>
  <description>The traxxas_description package</description>
  <!-- based on workf of jim.rothrock@wunderkammerlab.com -->

  <maintainer email="inaciose@gmail.com">Sergio Inacio</maintainer>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/traxxas_description</url> -->
  <author email="inaciose@gmail.com">Sergio Inacio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>ackermann_vehicle_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
